# iris

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
.github/: release.yml
.github/workflows/: release.yml
include/brightness/: argument_parser.hpp
prototype/: adjust-brightness.sh
src/: argument_parser.cpp  main.cpp
